conform svmiller.github.io to jekyll-template (02.02.2016)

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -93,9 +93,9 @@ a {
     color: $brand-color;
     text-decoration: none;
 
-    &:visited {
-        color: darken($brand-color, 15%);
-    }
+   &:visited {
+    /*    color: darken($brand-color, 15%); */
+    } 
 
     &:hover {
         color: $text-color;
@@ -208,6 +208,13 @@ pre {
 
 
 
-
+a.tosu {
+color: #b00000;
+background: #f5f5f5;
+text-decoration: none;
+ padding: 2px; 
+ font-weight: 600; 
+font-family: 'Capita', Georgia, serif;
+}
 
 
