--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@
 
 // Our variables
 $base-font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
+$base-font-size:   .95em;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
@@ -15,7 +15,7 @@ $spacing-unit:     30px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$brand-color:      #0077CC;
 // $gameday-sky: #109dc0;
 $clemson-purple:      #522d80;
 $clemson-orange:      #f66733;
