--- a/css/main.scss
+++ b/css/main.scss
@@ -18,7 +18,7 @@ $background-color: #fdfdfd;
 $brand-color:      #0077CC;
 // $gameday-sky: #109dc0;
 $clemson-purple:      #522d80;
-$clemson-orange:      #f66733;
+$clemson-orange:      #2D8BC9;
 
 
 $grey-color:       #828282;
