--- a/css/main.scss
+++ b/css/main.scss
@@ -16,9 +16,9 @@ $spacing-unit:     30px;
 $text-color:       #111;
 $background-color: #fdfdfd;
 $brand-color:      #0077CC;
-// $gameday-sky: #109dc0;
+$gameday-sky: #109dc0;
 $clemson-purple:      #522d80;
-$clemson-orange:      #2D8BC9;
+$clemson-orange:      #f66733;
 
 
 $grey-color:       #828282;
