--- a/css/main.scss
+++ b/css/main.scss
@@ -17,8 +17,8 @@ $text-color:       #111;
 $background-color: #fdfdfd;
 $brand-color:      ##9ec9cf;
 // $gameday-sky: #109dc0;
-$clemson-purple:      #522d80;
-$clemson-orange:      #f66733;
+$clemson-purple:      black;
+$clemson-orange:      blue;
 
 
 $grey-color:       #828282;
