--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,7 @@ $spacing-unit:     30px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
-$brand-color:      ##9ec9cf;
+$brand-color:      #9ec9cf;
 // $gameday-sky: #109dc0;
 
 
