--- a/css/main.scss
+++ b/css/main.scss
@@ -6,8 +6,8 @@
 
 
 // Our variables
-$base-font-family: Yantramanav;
-$base-font-size:   .95em;
+$base-font-family: ' Yantramanav ';
+$base-font-size:   1.5em;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
