--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
-<link href='https://fonts.googleapis.com/css?family=Yantramanav' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Baloo+2:wght@600' rel='stylesheet' type='text/css'>
 
 {% if site.google_author %}<link rel="author" href="{{ site.google_author }}"/>{% endif %}
 {% if site.google_site_verification %}<meta name="google-site-verification" content="{{ site.google_site_verification}}" />{% endif %}
