--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
 
  {% include nav.html  %}
 
-<!-- <ul class="menu">
+<ul class="menu">
         <li> <a class="page-link" href="/about">About</a></li>
         <li> <a class="page-link"  href="/blog">Blog</a>
         <li> <a class="page-link" href="/blog">CV</a>
