--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -214,7 +214,7 @@ background: #f5f5f5;
 text-decoration: none;
  padding: 2px; 
  font-weight: 600; 
-font-family: 'Capita', Georgia, serif;
+font-family: 'Baloo 2', cursive;
 }
 
 
