--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -3,7 +3,7 @@
  */
 .site-header {
     border-top: 0px solid $grey-color-dark;
-	border-bottom: 1px solid $clemson-purple;
+	border-bottom: 3px solid $clemson-purple;
     min-height: 40px;
     background: $clemson-orange;
     // Positioning context for the mobile navigation icon
@@ -121,7 +121,7 @@ color: #522d80;
 	min-width: 265px;
 
 z-index:999;
-	font-family: Helvetica, Arial, Verdana, sans-serif;
+	font-family: 'Baloo 2', cursive;
 
 }
 
